Fix for wrapping scale on payment page.

--- a/app/stylesheets/_payment.sass
+++ b/app/stylesheets/_payment.sass
@@ -92,6 +92,8 @@ section#payment
       clear: none
       
       li
+        margin-left: 5px
+        
         a
           height: 26px
           line-height: 26px
